refactor: static ../../ path imports changed to absolute @ path imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,19 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "src",
+    "paths": {
+      "@types/*": ["types/*"],
+      "@pages/*": ["pages/*"],
+      "@hooks/*": ["hooks/*"],
+      "@store/*": ["store/*"],
+      "@assets/*": ["assets/*"],
+      "@layout/*": ["layout/*"],
+      "@router/*": ["router/*"],
+      "@helpers/*": ["helpers/*"],
+      "@service/*": ["service/*"],
+      "@components/*": ["components/*"],
+    },
   },
   "include": ["./src"],
   "composite": true,
